@@ -3,7 +3,6 @@
 int
 XUnmapWindow (Display *dpy, Window w)
 {
-	printf("Unmapping window %d\n", w);
 	GrUnmapWindow(w);
 	return 1;
 }
@@ -11,7 +10,6 @@ XUnmapWindow (Display *dpy, Window w)
 Status
 XWithdrawWindow(Display * display, Window w, int screen_number)
 {
-	printf("Withdrawing window %d\n", w);
 	GrUnmapWindow(w);
 	return 1;
 }
