@@ -1,5 +1,10 @@
 15 November 2007
-	* temp fix memory leak in XSetClipMask and XSetClipRectangles
+	* added scalable font handling to XLoadFont with X11 fonts.dir
+	* added input window handling to XCreateWindow (Giosis/Foedrowitz)
+	* added BIGENDIAN option to Makefile
+	* fix XCreateBitmapFromData for big endian (Giosis/Foedrowitz)
+	* fix XDrawPoints past first coord (Giosis/Foedrowitz)
+	* fix memory leak in XSetClipMask and XSetClipRectangles
 	* rewrite XChangeProperty, never worked, implement XGetWindowProperty
 	* fix XInternAtom to return above XA_LAST_PREDEFINED
 14 June 2005
